fixed unique user voting. changed endpoint(deleted {sign_id})
