# pkg/handlers/subs.go
@@ -79,12 +79,13 @@ func (h *Handler) createSub(ctx *gin.Context) {
 				"error while setting custom error type")
 			return
 		}
-		if pqErr.Code.Name() == "unique_violation" {
-			newErrorResponse(ctx, http.StatusForbidden, "user already voted")
+
+		if pqErr.Code.Name() != "unique_violation" {
+			newErrorResponse(ctx, http.StatusInternalServerError, err.Error())
 			return
 		}
 
-		newErrorResponse(ctx, http.StatusInternalServerError, err.Error())
+		newErrorResponse(ctx, http.StatusForbidden, "user already voted")
 		return
 	}
 
@@ -101,12 +102,11 @@ func (h *Handler) createSub(ctx *gin.Context) {
 // @Accept  json
 // @Produce  json
 // @Param id path int true "Petition id"
-// @Param sign_id path int true "Signatorie id"
 // @Success 200 {object} statusResponse
 // @Failure 400 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
-// @Router /api/petitions/{id}/subs/{sign_id} [delete]
+// @Router /api/petitions/{id}/subs [delete]
 func (h *Handler) deleteSub(ctx *gin.Context) {
 	userId, err := h.getUserId(ctx)
 	if err != nil {
@@ -120,13 +120,7 @@ func (h *Handler) deleteSub(ctx *gin.Context) {
 		return
 	}
 
-	subId, err := strconv.Atoi(ctx.Param(subIdParam))
-	if err != nil {
-		newErrorResponse(ctx, http.StatusInternalServerError, err.Error())
-		return
-	}
-
-	err = h.services.DeleteSub(subId, petitionId, userId)
+	err = h.services.DeleteSub(petitionId, userId)
 	if err != nil {
 		newErrorResponse(ctx, http.StatusInternalServerError, err.Error())
 		return
